Fix UI layout issues and update variable access in finance invite component.

--- a/components/layout/header.module.scss
+++ b/components/layout/header.module.scss
@@ -117,6 +117,7 @@
   @media screen and (max-width: 1000px) {
     position: fixed;
     top: 0;
+    z-index: 100;
   }
 }
 .header__row {
