--- a/components/layout/wrapper.module.scss
+++ b/components/layout/wrapper.module.scss
@@ -8,7 +8,7 @@
   background: var(--background);
   background-size: cover;
   justify-content: center;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .page__open {
   @media (max-width: 1000px) {
